--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "@popperjs/core": "^2.10.2",
     "apollo-boost": "^0.4.9",
-    "bootstrap": "^5.1.1",
+    "bootstrap": "^5.1.2",
+    "bootstrap-vue": "^2.21.2",
     "graphql": "^15.6.1",
     "jquery": "^3.6.0",
     "node-sass": "^6.0.1",
