--- a/package.json
+++ b/package.json
@@ -4,19 +4,33 @@
   "description": "",
   "main": "webpack.config.js",
   "private": true,
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "dependencies": {
     "@popperjs/core": "^2.10.2",
-    "apollo-boost": "^0.4.9",
+    "@vue/apollo-composable": "^4.0.0-alpha.15",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
+    "aws-appsync": "^4.1.2",
+    "aws-sdk": "^2.1001.0",
     "bootstrap": "^5.1.2",
     "bootstrap-vue": "^2.21.2",
+    "dotenv-webpack": "^7.0.3",
     "graphql": "^15.6.1",
+    "graphql-tag": "^2.12.5",
     "jquery": "^3.6.0",
     "node-sass": "^6.0.1",
     "popper.js": "^1.16.1",
     "sass-loader": "^12.1.0",
+    "util": "^0.12.4",
     "vue": "^2.6.14",
     "vue-apollo": "^3.0.8",
     "vue-loader": "^15.9.8",
+    "vue-styled-components": "^1.6.0",
     "vue-template-compiler": "^2.6.14"
   },
   "devDependencies": {
