--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "vue-apollo": "^3.0.8",
     "vue-loader": "^15.9.8",
     "vue-styled-components": "^1.6.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "vue2-timeago": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
