--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv-webpack": "^7.0.3",
     "graphql": "^15.6.1",
     "graphql-tag": "^2.12.5",
+    "jq-web": "^0.5.1",
     "jquery": "^3.6.0",
     "node-sass": "^6.0.1",
     "popper.js": "^1.16.1",
