--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@vue/apollo-composable": "^4.0.0-alpha.15",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
     "apollo-link-http": "^1.5.17",
+    "apollo-link-rest": "^0.8.0-beta.0",
     "aws-appsync": "^4.1.2",
     "aws-sdk": "^2.1001.0",
     "bootstrap": "^5.1.2",
@@ -27,12 +29,15 @@
     "node-sass": "^6.0.1",
     "popper.js": "^1.16.1",
     "sass-loader": "^12.1.0",
+    "svg-url-loader": "^7.1.1",
     "util": "^0.12.4",
     "vue": "^2.6.14",
     "vue-apollo": "^3.0.8",
+    "vue-grid-layout": "^2.3.12",
     "vue-loader": "^15.9.8",
     "vue-styled-components": "^1.6.0",
     "vue-template-compiler": "^2.6.14",
+    "vue-wysiwyg": "^1.7.2",
     "vue2-timeago": "^2.0.1"
   },
   "devDependencies": {
