--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "vue-styled-components": "^1.6.0",
     "vue-template-compiler": "^2.6.14",
     "vue-wysiwyg": "^1.7.2",
-    "vue2-timeago": "^2.0.1"
+    "vue2-timeago": "^2.0.1",
+    "youtrack-rest-client": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
