--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "aws-sdk": "^2.1001.0",
     "bootstrap": "^5.1.2",
     "bootstrap-vue": "^2.21.2",
-    "dotenv-webpack": "^7.0.3",
     "graphql": "^15.6.1",
     "graphql-tag": "^2.12.5",
     "jq-web": "^0.5.1",
@@ -33,11 +32,11 @@
     "util": "^0.12.4",
     "vue": "^2.6.14",
     "vue-apollo": "^3.0.8",
+    "vue-context": "^6.0.0",
     "vue-grid-layout": "^2.3.12",
     "vue-loader": "^15.9.8",
     "vue-styled-components": "^1.6.0",
     "vue-template-compiler": "^2.6.14",
-    "vue-wysiwyg": "^1.7.2",
     "vue2-timeago": "^2.0.1",
     "youtrack-rest-client": "^1.4.0"
   },
@@ -46,6 +45,7 @@
     "@babel/preset-env": "^7.15.6",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
+    "dotenv-webpack": "^7.0.3",
     "less": "^4.1.2",
     "less-loader": "^10.0.1",
     "style-resources-loader": "^1.4.1",
